--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <canvas id="canvas" width="600" height="600" style="border:1px solid #000000;"></canvas>
+        <div id="canvas-ctn">
+            <canvas id="canvas" style="border:1px solid #000000;"></canvas>
+        </div>
         <button id="clear-btn" onclick="clearCanvas()">Clear</button>
         <div id="color">
             <button id="black" onclick="changeColor('black')"></button>
